fix: overflow da tela de login

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  
+
   --radius: 0.3rem;
 
   --color-background: #ffffff;
@@ -81,8 +81,14 @@ body {
   line-height: 120%;
 }
 
+html,
 body {
   margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+body {
   display: flex;
   place-items: center;
   min-width: 320px;
